Updated file added

--- a/4. Modelling/Data_Modelling.ipynb
+++ b/4. Modelling/Data_Modelling.ipynb
@@ -128,7 +128,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- We are ussing Multilayer Perceptron Classifier algorith for this project.\n",
+    "- We are using Multilayer Perceptron Classifier algorithm for this project.\n",
     "- A Perceptron(neuron) is a neural network unit that does certain computations to detect features\n",
     "    or business intelligence in the input data.\n",
     "- A Perceptron consists of input values, weights and a bias, a weighted sum and activation function.\n",
@@ -251,7 +251,7 @@
    "metadata": {},
    "source": [
     "- Accuracy is the number of correctly predicted data points out of all the data points.\n",
-    "- Doesn’t work well with imbalance dataset\n"
+    "- Doesn’t work well with imbalance dataset.\n"
    ]
   },
   {
@@ -259,7 +259,7 @@
    "metadata": {},
    "source": [
     "# F1 score\n",
-    "-It is the harmonic mean of precision and recall. This takes the contribution of both, precision as well as recall\n"
+    "- It is the harmonic mean of precision and recall. This takes the contribution of both, precision as well as recall\n"
    ]
   },
   {
